--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development",
+    "dev": "ng build --watch --configuration development",
+    "uat": "ng build --watch --configuration uat",
+    "prod": "ng build --watch --configuration production",
     "test": "ng test"
   },
   "private": true,
@@ -15,10 +17,12 @@
     "@angular/compiler": "^16.0.0",
     "@angular/core": "^16.0.0",
     "@angular/forms": "^16.0.0",
+    "@angular/material": "^16.1.1",
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.7.12",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
@@ -34,6 +38,6 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "typescript": "~5.0.2"
-  }
-  ,"proxy":"https://thanhtuandang.bsite.net"
+  },
+  "proxy": "https://thanhtuandang.bsite.net"
 }
