--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
     "jquery": "^3.7.0",
+    "ngx-owl-carousel-o": "^16.0.0",
     "ngx-spinner": "^16.0.2",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.7.12",
-    "tslib": "^2.3.0",
+    "tslib": "^2.6.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
