--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@types/node-forge": "^1.3.3",
     "animate.css": "^4.1.1",
+    "crypto-js": "^4.1.1",
     "jquery": "^3.7.0",
     "ngx-cookie-service": "^16.0.0",
     "ngx-facebook": "^3.0.0-0",
     "ngx-owl-carousel-o": "^16.0.0",
     "ngx-spinner": "^16.0.2",
+    "node-forge": "^1.3.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.7.12",
     "tslib": "^2.3.0",
@@ -38,6 +41,7 @@
     "@angular-devkit/build-angular": "^16.0.1",
     "@angular/cli": "~16.0.1",
     "@angular/compiler-cli": "^16.0.0",
+    "@types/crypto-js": "^4.1.1",
     "@types/jasmine": "~4.3.0",
     "@types/jquery": "^3.5.16",
     "@types/node": "^20.3.2",
