--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "ngx-cookie-service": "^16.0.0",
     "ngx-facebook": "^3.0.0-0",
     "ngx-owl-carousel-o": "^16.0.0",
+    "ngx-slick-carousel": "^15.0.0",
     "ngx-spinner": "^16.0.2",
     "node-forge": "^1.3.1",
     "rxjs": "~7.8.0",
+    "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.7.12",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
