--- a/angular.json
+++ b/angular.json
@@ -21,7 +21,7 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
-              "src/favicon.ico",
+              "src/icon2.ico",
               "src/assets"
             ],
             "styles": [
@@ -103,7 +103,7 @@
             ],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
-              "src/favicon.ico",
+              "src/icon2.ico",
               "src/assets"
             ],
             "styles": [
