--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/core": "^16.0.0",
     "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^16.0.0",
+    "@angular/google-maps": "^16.1.7",
     "@angular/material": "^16.1.4",
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
